--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -4,7 +4,7 @@
     </div>
     <div class="list-group list-group-flush">
 
-        <a class="list-group-item list-group-item-action p-3" href="#">
+        <a class="list-group-item list-group-item-action p-3" href="{% url 'board:advertisement_list' %}">
             Все объявления
         </a>
 
