--- a/board/templates/board/advertisement_list.html
+++ b/board/templates/board/advertisement_list.html
@@ -11,7 +11,11 @@
             <div class="col-md-6 col-lg-4 mb-4">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h5 class="card-title">{{ ad.title }}</h5>
+                        <h5 class="card-title">
+                            <a href="{% url 'board:advertisement_detail' ad.pk %}">
+                                {{ ad.title }}
+                            </a>
+                        </h5>
                         <p class="card-text">
                             {{ ad.text|truncatechars:120 }}
                         </p>
