--- a/board/templates/board/advertisement_detail.html
+++ b/board/templates/board/advertisement_detail.html
@@ -19,9 +19,34 @@
         </div>
     </div>
 </div>
+<div class="mt-5">
+    <h4>Оставить отклик</h4>
 
-<div class="mt-4">
-    <h4>Отклики</h4>
-    <p class="text-muted">Здесь скоро будут отклики 👀</p>
+    {% if user.is_authenticated %}
+        <form method="post">
+            {% csrf_token %}
+
+            {% if form.non_field_errors %}
+                <div class="alert alert-danger">
+                    {{ form.non_field_errors }}
+                </div>
+            {% endif %}
+
+            <div class="mb-3">
+                {{ form.text }}
+                {% for error in form.text.errors %}
+                    <div class="text-danger">{{ error }}</div>
+                {% endfor %}
+            </div>
+
+            <button type="submit" class="btn btn-primary">
+                Отправить отклик
+            </button>
+        </form>
+    {% else %}
+        <p>
+            <a href="#">Войдите</a>, чтобы оставить отклик.
+        </p>
+    {% endif %}
 </div>
 {% endblock %}
