--- a/board/templates/board/advertisement_detail.html
+++ b/board/templates/board/advertisement_detail.html
@@ -15,7 +15,7 @@
         <hr>
 
         <div class="card-text">
-            {{ advertisement.text|linebreaks }}
+            {{ advertisement.content|safe }}
         </div>
     </div>
 </div>
