enable rich content with images and embedded videos in advertisements

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -12,7 +12,7 @@
             Мои объявления
         </a>
 
-        <a class="list-group-item list-group-item-action p-3" href="#">
+        <a class="list-group-item list-group-item-action p-3" href="{% url 'board:my_responses' %}">
             Отклики
         </a>
 
