use CKEditorUploadingWidget in advertisement form

--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -20,6 +20,11 @@
             </a>
 
             <a class="list-group-item list-group-item-action p-3"
+               href="{% url 'board:advertisement_create' %}">
+                Создать объявление
+            </a>
+
+            <a class="list-group-item list-group-item-action p-3"
                href="{% url 'board:my_responses' %}">
                 Отклики
             </a>
